--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,6 +2,7 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
+import ysabeau from '@fontsource-variable/ysabeau-infant/files/ysabeau-infant-latin-wght-normal.woff2';
 
 interface Props {
 	title: string;
@@ -21,8 +22,8 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="generator" content={Astro.generator} />
 
 <!-- Font preloads -->
-<link rel="preload" href="/fonts/atkinson-regular.woff" as="font" type="font/woff" crossorigin />
-<link rel="preload" href="/fonts/atkinson-bold.woff" as="font" type="font/woff" crossorigin />
+<link rel="preload" href={ysabeau} as="font" type="font/woff2" crossorigin="anonymous" />
+
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
