--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,22 +15,18 @@
 	--box-shadow: 0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
 		0 16px 32px rgba(var(--gray), 33%);
 }
+/* ysabeau-infant-latin-wght-normal */
 @font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-regular.woff') format('woff');
-	font-weight: 400;
-	font-style: normal;
-	font-display: swap;
+  font-family: 'Ysabeau Infant Variable';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 1 1000;
+  src: url(@fontsource-variable/ysabeau-infant/files/ysabeau-infant-latin-wght-normal.woff2) format('woff2-variations');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
-@font-face {
-	font-family: 'Atkinson';
-	src: url('/fonts/atkinson-bold.woff') format('woff');
-	font-weight: 700;
-	font-style: normal;
-	font-display: swap;
-}
+
 body {
-	font-family: 'Atkinson', sans-serif;
+	font-family: 'Ysabeau Infant Variable', sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
@@ -40,13 +36,12 @@ body {
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
-	line-height: 1.7;
 }
 main {
-	width: 720px;
+	/* width: 720px;
 	max-width: calc(100% - 2em);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 3em 1em; */
 }
 h1,
 h2,
@@ -102,7 +97,6 @@ table {
 img {
 	max-width: 100%;
 	height: auto;
-	border-radius: 8px;
 }
 code {
 	padding: 2px 5px;
@@ -131,7 +125,7 @@ hr {
 		font-size: 18px;
 	}
 	main {
-		padding: 1em;
+		/* padding: 1em; */
 	}
 }
 
