fix: typescript and linter error

--- a/src/components/CardBookList.astro
+++ b/src/components/CardBookList.astro
@@ -1,13 +1,14 @@
 ---
 import CardBook from "./CardBook.astro"
+import { type LittleStory } from "@types"
 
 const { bookList } = Astro.props
 ---
 <div>Elegir tipo</div>
 <div class="wrapper-grid grid gap-4 z-20">
   {
-    bookList.map(({ slug, title, created_at, description }) => (
-      <CardBook slug={slug} title={title} created_at={created_at} description={description} />
+    bookList.map(({ slug, title, created_at, resume }: LittleStory) => (
+      <CardBook slug={slug} title={title} created_at={created_at} description={resume} />
     ))
   }
 </div>
