--- a/src/components/sections/Books.astro
+++ b/src/components/sections/Books.astro
@@ -1,6 +1,10 @@
 ---
 import CardBookList from "@components/CardBookList.astro";
+import { type LittleStory } from "@types";
 
+interface Props {
+  bookList: LittleStory[];
+}
 const { bookList } = Astro.props;
 ---
 
