refactor: fix broken image URLs in Hero component

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -49,8 +49,8 @@ import Search from '@components/Search'
 <style>
 
   :root {
-    --planet-1-image: url(hero/planet-texture-1.webp);
-    --planet-2-image: url(hero/planet-texture-2.webp);
+    --planet-1-image: url(./hero/planet-texture-1.webp);
+    --planet-2-image: url(./hero/planet-texture-2.webp);
     --planet-1-tilt: rotate(40deg);
     --planet-2-tilt: rotate(150deg); 
     --planet-1-color: blue;
