--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -1,19 +1,18 @@
 ---
+import Globo from '@components/Globo.astro'
+import Planet from '@components/Planet.astro'
 import Search from '@components/Search'
+import Stars from '@components/Stars.astro'
 ---
 
 <section class="hero w-svw h-svh top-0 left-0 relative overflow-hidden">
-  <div class="wall w-svw h-[70svh] relative flex justify-end items-center flex-col gap-32">
+  <div class="wall w-svw h-[70svh] relative flex items-center flex-col-reverse gap-32">
     <div class="portal absolute overflow-hidden bottom-0 margin-auto max-w-xl rounded-tl-full rounded-tr-full h-[90%] w-5/6 z-10">
-      <div id='stars'></div>
+      <Stars />
     </div>
-    <img src="hero/globo.webp" alt="globo" class="globo absolute h-24 left-[10%] top-2/3" />
-    <div class="planet-atmosphere-1 absolute z-10 hidden md:block">
-      <div class="planet_surface-1"></div>
-    </div>
-    <div class="planet-atmosphere-2 absolute z-10 hidden md:block">
-      <div class="planet_surface-2"></div>
-    </div>
+    <Globo />
+    <Planet planet1 />
+    <Planet planet2 />
     <div class="absolute bottom-0 flex margin-auto max-w-3xl justify-between items-end">
       <div class="w-2/5 h-auto relative -ml-20 -mb-4 z-10">
         <img src="hero/hero-left-ornament.webp" alt="ornamentos de la izquierda" class="left-ornament-shine z-20" />
@@ -23,13 +22,6 @@ import Search from '@components/Search'
         <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament-shine z-20" />
         <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament z-10 absolute top-0" />
       </div>
-    </div>
-    <div class="flex flex-col gap-4 items-center justify-center z-10 text-white">
-      <div class="flex justify-center items-center flex-col">
-        <h1 class="pretitle text-balance font-bold mb-0">Cuentos interactivos</h1>
-        <span class="title font-thin text-center text-balance leading-none">¿Qué camino eliges?</span>
-      </div>
-      <Search />
     </div>
     <div class="flex justify-between z-10 -mb-12 gap-12">
       <div class="relative w-48 flex">
@@ -43,21 +35,19 @@ import Search from '@components/Search'
         <img src="hero/hero-right-book.webp" alt="Libro abierto en el centro de la imagen" class="right-book hidden md:block z-20 w-full h-auto mx-auto bottom-0" />
       </div>
     </div>
+    <div class="flex flex-col gap-4 items-center justify-center z-10 text-white">
+      <div class="flex justify-center items-center flex-col">
+        <h1 class="pretitle text-balance font-bold mb-0">Cuentos interactivos</h1>
+        <span class="title font-thin text-center text-balance leading-none">¿Qué camino eliges?</span>
+      </div>
+      <Search client:load />
+    </div>
   </div>
 </section>
 
 <style>
 
-  :root {
-    --planet-1-image: url(./hero/planet-texture-1.webp);
-    --planet-2-image: url(./hero/planet-texture-2.webp);
-    --planet-1-tilt: rotate(40deg);
-    --planet-2-tilt: rotate(150deg); 
-    --planet-1-color: blue;
-    --planet-2-color: #e8cda2;
-    --planet-1-day: 153.3;
-    --planet-2-day: 153.3;
-  }
+
 
   .hero {
     perspective: 1000px;
@@ -119,92 +109,4 @@ import Search from '@components/Search'
     filter: drop-shadow(4px 12px 12px rgba(0,0,0,.5))
   }
 
-  .planet-atmosphere-1 {
-    height: 100px;
-    width: 100px;
-    background: radial-gradient(circle at 30% 50%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 65%);
-    border-radius: 100px;
-    overflow: hidden;
-    box-shadow: inset 10px 0px 12px -2px rgba(255, 255, 255, 0.2), inset -70px 0px 50px 0px black, 7px 0px 70px -8px #f67a2e;
-    top: 30%;
-    left: 5%;
-    filter: saturate(0.5);
-  }
-
-  .planet_surface-1 {
-    background-image: var(--planet-1-image);
-    transform: var(--planet-1-tilt) scale(1.2);
-    animation: planetRotate calc(var(--planet-1-day)* .1s) linear infinite;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background-size: cover;
-  }
-
-  .planet-atmosphere-2 {
-    height: 120px;
-    width: 120px;
-    background: radial-gradient(circle at 30% 50%, rgba(255, 255, 255, 0.3) 0%, rgba(255, 255, 255, 0) 65%);
-    border-radius: 100px;
-    overflow: hidden;
-    box-shadow: inset 10px 0px 12px -2px rgba(255, 255, 255, 0.2), inset -70px 0px 50px 0px black, 0px 0px 77px 17px #ab8b6b;
-    top: 20%;
-    right: 10%;
-    filter: saturate(0.5);
-  }
-
-  .planet_surface-2 {
-    background-image: var(--planet-2-image);
-    transform: var(--planet-2-tilt) scale(1.2);
-    animation: planetRotate calc(var(--planet-2-day)* .1s) linear infinite;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background-size: cover;
-  }
-
-  #stars {
-    width: 1px;
-    height: 1px;
-    background: transparent;
-    box-shadow: 1950px 322px #FFF , 1061px 344px #FFF , 1405px 2000px #FFF , 1857px 1075px #FFF , 1971px 549px #FFF , 1246px 217px #FFF , 589px 1573px #FFF , 239px 1658px #FFF , 1269px 1241px #FFF , 148px 1591px #FFF , 1046px 307px #FFF , 1937px 1702px #FFF , 499px 1348px #FFF , 1562px 1185px #FFF , 1541px 1864px #FFF , 723px 454px #FFF , 1013px 88px #FFF , 80px 925px #FFF , 266px 772px #FFF , 473px 612px #FFF , 1974px 1889px #FFF , 1442px 1354px #FFF , 369px 884px #FFF , 909px 1496px #FFF , 841px 1478px #FFF , 184px 696px #FFF , 1114px 71px #FFF , 1444px 724px #FFF , 268px 1068px #FFF , 1559px 1449px #FFF , 1203px 645px #FFF , 1950px 57px #FFF , 1511px 402px #FFF , 854px 1556px #FFF , 1526px 224px #FFF , 1889px 822px #FFF , 333px 218px #FFF , 621px 1303px #FFF , 1954px 219px #FFF , 1484px 1742px #FFF , 1445px 828px #FFF , 1623px 1579px #FFF , 910px 573px #FFF , 406px 1995px #FFF , 1463px 1753px #FFF , 790px 324px #FFF , 664px 611px #FFF , 1636px 1214px #FFF , 1362px 288px #FFF , 1262px 31px #FFF , 774px 930px #FFF , 1068px 1932px #FFF , 1850px 613px #FFF , 1328px 920px #FFF , 317px 405px #FFF , 1532px 1356px #FFF , 548px 1777px #FFF , 509px 1189px #FFF , 832px 523px #FFF , 1389px 1039px #FFF , 1934px 1811px #FFF , 1350px 708px #FFF , 701px 1854px #FFF , 861px 12px #FFF , 936px 326px #FFF , 1325px 347px #FFF , 1232px 587px #FFF , 1253px 1086px #FFF , 1615px 1667px #FFF , 226px 230px #FFF , 722px 671px #FFF , 660px 1131px #FFF , 633px 361px #FFF , 1124px 1561px #FFF , 1182px 770px #FFF , 404px 483px #FFF , 161px 1531px #FFF , 729px 1755px #FFF , 420px 429px #FFF , 624px 1891px #FFF , 290px 840px #FFF , 1445px 931px #FFF , 1183px 66px #FFF , 1328px 1649px #FFF , 1259px 306px #FFF , 561px 1380px #FFF , 735px 1806px #FFF , 285px 507px #FFF , 615px 1839px #FFF , 1768px 1529px #FFF , 1841px 1890px #FFF , 235px 434px #FFF , 1122px 981px #FFF , 647px 1029px #FFF , 1698px 537px #FFF , 1447px 536px #FFF , 595px 220px #FFF , 1893px 1586px #FFF , 801px 1402px #FFF , 978px 472px #FFF , 794px 200px #FFF , 1158px 988px #FFF , 5px 340px #FFF , 838px 36px #FFF , 1666px 1438px #FFF , 163px 498px #FFF , 1419px 82px #FFF , 974px 1108px #FFF , 77px 310px #FFF , 470px 1142px #FFF , 319px 645px #FFF , 615px 291px #FFF , 764px 600px #FFF , 1811px 617px #FFF , 234px 355px #FFF , 77px 934px #FFF , 1041px 1379px #FFF , 563px 1674px #FFF , 1993px 420px #FFF , 58px 1916px #FFF , 430px 747px #FFF , 1173px 1846px #FFF , 1508px 1432px #FFF , 1287px 392px #FFF , 726px 742px #FFF , 919px 779px #FFF , 1859px 204px #FFF , 148px 1018px #FFF , 691px 1832px #FFF , 940px 705px #FFF , 952px 119px #FFF , 1799px 801px #FFF , 742px 691px #FFF , 281px 1051px #FFF , 1518px 91px #FFF , 92px 611px #FFF , 1672px 612px #FFF , 1917px 1596px #FFF , 927px 1058px #FFF , 1802px 1617px #FFF , 1921px 471px #FFF , 1046px 971px #FFF , 1898px 636px #FFF , 475px 180px #FFF , 349px 351px #FFF , 37px 336px #FFF , 390px 232px #FFF , 1856px 524px #FFF , 632px 1451px #FFF , 1712px 1804px #FFF , 1179px 390px #FFF , 1151px 1624px #FFF , 1073px 1044px #FFF , 538px 559px #FFF , 818px 1526px #FFF , 1649px 1533px #FFF , 1503px 946px #FFF , 50px 527px #FFF , 955px 1053px #FFF , 460px 1264px #FFF , 1323px 8px #FFF , 1007px 901px #FFF , 1645px 1503px #FFF , 1869px 172px #FFF , 875px 1693px #FFF , 1017px 1424px #FFF , 192px 232px #FFF , 959px 1642px #FFF , 1203px 986px #FFF , 1236px 563px #FFF , 711px 1738px #FFF , 1174px 916px #FFF , 1874px 1261px #FFF , 1802px 985px #FFF , 168px 981px #FFF , 1928px 432px #FFF , 1816px 39px #FFF , 631px 550px #FFF , 232px 504px #FFF , 1124px 1528px #FFF , 1585px 949px #FFF , 17px 1848px #FFF , 1551px 920px #FFF , 491px 965px #FFF , 1277px 1539px #FFF , 1617px 498px #FFF , 1984px 603px #FFF , 912px 787px #FFF , 1828px 1876px #FFF , 511px 27px #FFF , 1655px 1815px #FFF , 1748px 1488px #FFF , 1638px 1872px #FFF , 519px 241px #FFF , 1238px 1595px #FFF , 508px 814px #FFF , 563px 633px #FFF , 537px 316px #FFF , 1329px 580px #FFF , 1305px 64px #FFF , 619px 518px #FFF , 198px 340px #FFF , 121px 1011px #FFF , 1040px 1500px #FFF , 1931px 1234px #FFF , 507px 1198px #FFF , 1184px 1368px #FFF , 834px 1325px #FFF , 1748px 945px #FFF , 157px 1999px #FFF , 681px 1140px #FFF , 770px 1878px #FFF , 711px 994px #FFF , 495px 1637px #FFF , 433px 275px #FFF , 121px 1219px #FFF , 1608px 817px #FFF , 1580px 1262px #FFF , 726px 915px #FFF , 1374px 471px #FFF , 889px 1409px #FFF , 526px 294px #FFF , 1692px 169px #FFF , 69px 866px #FFF , 1775px 1695px #FFF , 1130px 1790px #FFF , 952px 71px #FFF , 98px 1001px #FFF , 215px 1876px #FFF , 966px 167px #FFF , 1544px 431px #FFF , 1032px 511px #FFF , 1762px 1698px #FFF , 714px 134px #FFF , 444px 1382px #FFF , 1746px 1242px #FFF , 1172px 1373px #FFF , 74px 553px #FFF , 1888px 1608px #FFF , 573px 1584px #FFF , 955px 54px #FFF , 1854px 1773px #FFF , 878px 480px #FFF , 532px 155px #FFF , 1363px 708px #FFF , 1095px 685px #FFF , 388px 340px #FFF , 1830px 984px #FFF , 108px 1202px #FFF , 1905px 995px #FFF , 391px 1118px #FFF , 212px 1051px #FFF , 1706px 580px #FFF , 532px 314px #FFF , 1402px 264px #FFF , 1442px 361px #FFF , 1361px 836px #FFF , 1097px 260px #FFF , 974px 498px #FFF , 228px 103px #FFF , 1777px 1492px #FFF , 432px 1717px #FFF , 1863px 500px #FFF , 645px 1019px #FFF , 1237px 749px #FFF , 712px 414px #FFF , 1448px 1773px #FFF , 262px 555px #FFF , 202px 1503px #FFF , 728px 957px #FFF , 44px 61px #FFF , 565px 1106px #FFF , 1483px 251px #FFF , 545px 1242px #FFF , 521px 1154px #FFF , 1964px 1088px #FFF , 1772px 1541px #FFF , 780px 1804px #FFF , 869px 1094px #FFF , 744px 1049px #FFF , 1016px 561px #FFF , 195px 481px #FFF , 682px 1852px #FFF , 1686px 1183px #FFF , 1843px 1943px #FFF , 1073px 1729px #FFF , 816px 1966px #FFF , 512px 1345px #FFF , 657px 407px #FFF , 778px 167px #FFF , 67px 954px #FFF , 1087px 557px #FFF , 632px 1507px #FFF , 1253px 118px #FFF , 921px 554px #FFF , 877px 1246px #FFF , 1223px 62px #FFF , 1136px 729px #FFF , 444px 575px #FFF , 1186px 1983px #FFF , 305px 665px #FFF , 1999px 341px #FFF , 1528px 1129px #FFF , 930px 936px #FFF , 475px 71px #FFF , 359px 290px #FFF , 1697px 251px #FFF , 76px 305px #FFF , 1685px 508px #FFF , 1775px 933px #FFF , 540px 1736px #FFF , 1463px 1244px #FFF , 1902px 27px #FFF , 1446px 30px #FFF , 73px 1075px #FFF , 512px 1045px #FFF , 1119px 1615px #FFF , 998px 93px #FFF , 500px 1419px #FFF , 1074px 949px #FFF , 1339px 383px #FFF , 1644px 1597px #FFF , 471px 1286px #FFF , 893px 497px #FFF , 566px 821px #FFF , 218px 701px #FFF , 1639px 1140px #FFF , 1387px 199px #FFF , 1969px 1713px #FFF , 829px 1124px #FFF , 1450px 433px #FFF , 713px 1455px #FFF , 455px 758px #FFF , 595px 1568px #FFF , 422px 113px #FFF , 1042px 1844px #FFF , 1059px 876px #FFF , 326px 1069px #FFF , 1799px 1502px #FFF , 1054px 627px #FFF , 493px 203px #FFF , 793px 734px #FFF , 432px 1728px #FFF , 223px 619px #FFF , 1463px 125px #FFF , 331px 1758px #FFF , 912px 969px #FFF , 54px 956px #FFF , 213px 166px #FFF , 1252px 1879px #FFF , 1619px 1399px #FFF , 338px 1152px #FFF , 830px 1317px #FFF , 1491px 1403px #FFF , 578px 1375px #FFF , 38px 950px #FFF , 1341px 6px #FFF , 1402px 461px #FFF , 791px 884px #FFF , 1798px 1202px #FFF , 1465px 1095px #FFF , 257px 1729px #FFF , 1704px 882px #FFF , 1969px 1705px #FFF , 965px 1446px #FFF , 1787px 1488px #FFF , 1634px 1196px #FFF , 236px 1213px #FFF , 1204px 1464px #FFF , 1221px 1157px #FFF , 624px 1376px #FFF , 795px 1415px #FFF , 90px 1459px #FFF , 1884px 791px #FFF , 1977px 575px #FFF , 426px 1511px #FFF , 1665px 1900px #FFF , 1035px 925px #FFF , 16px 457px #FFF , 1360px 1637px #FFF , 461px 335px #FFF , 583px 114px #FFF , 426px 1884px #FFF , 228px 1597px #FFF , 1746px 1114px #FFF , 1233px 570px #FFF , 1711px 249px #FFF , 792px 1128px #FFF , 613px 1258px #FFF , 1260px 357px #FFF , 93px 369px #FFF , 1267px 867px #FFF , 270px 1966px #FFF , 545px 187px #FFF , 133px 1192px #FFF , 117px 1867px #FFF , 1063px 359px #FFF , 265px 947px #FFF , 810px 25px #FFF , 1543px 530px #FFF , 803px 772px #FFF , 1282px 1409px #FFF , 1326px 548px #FFF , 321px 142px #FFF , 65px 1353px #FFF , 1437px 107px #FFF , 78px 423px #FFF , 230px 1739px #FFF , 62px 1471px #FFF , 14px 440px #FFF , 136px 174px #FFF , 936px 827px #FFF , 1828px 1219px #FFF , 1474px 1350px #FFF , 7px 1157px #FFF , 272px 453px #FFF , 2000px 463px #FFF , 1408px 763px #FFF , 789px 379px #FFF , 132px 1797px #FFF , 1551px 1963px #FFF , 868px 1834px #FFF , 1536px 850px #FFF , 1672px 113px #FFF , 560px 207px #FFF , 689px 1170px #FFF , 1965px 840px #FFF , 951px 1004px #FFF , 1051px 1235px #FFF , 1314px 1408px #FFF , 1850px 1959px #FFF , 240px 1778px #FFF , 1743px 253px #FFF , 1872px 1177px #FFF , 832px 432px #FFF , 101px 1966px #FFF , 1961px 1436px #FFF , 815px 1647px #FFF , 1803px 1963px #FFF , 161px 14px #FFF , 806px 8px #FFF , 733px 486px #FFF , 1303px 720px #FFF , 1058px 1432px #FFF , 1676px 653px #FFF , 643px 281px #FFF , 1522px 1729px #FFF , 480px 836px #FFF , 905px 1050px #FFF , 855px 1473px #FFF , 1696px 1513px #FFF , 1421px 566px #FFF , 1795px 1785px #FFF , 945px 1354px #FFF , 1046px 1227px #FFF , 295px 1877px #FFF , 1136px 487px #FFF , 1023px 1419px #FFF , 1462px 750px #FFF , 772px 280px #FFF , 209px 1791px #FFF , 912px 1875px #FFF , 718px 1203px #FFF , 178px 1624px #FFF , 565px 275px #FFF , 1516px 1334px #FFF , 379px 314px #FFF , 426px 1527px #FFF , 1083px 547px #FFF , 1639px 965px #FFF , 1437px 308px #FFF , 811px 416px #FFF , 1757px 1308px #FFF , 234px 1588px #FFF , 1709px 639px #FFF , 451px 1319px #FFF , 851px 1224px #FFF , 1172px 34px #FFF , 704px 1683px #FFF , 1361px 873px #FFF , 740px 419px #FFF , 1293px 734px #FFF , 555px 821px #FFF , 1968px 1310px #FFF , 1305px 456px #FFF , 1353px 1612px #FFF , 982px 1580px #FFF , 1429px 1082px #FFF , 1029px 1072px #FFF , 790px 233px #FFF , 175px 1686px #FFF , 1892px 915px #FFF , 1371px 600px #FFF , 631px 876px #FFF , 353px 47px #FFF , 1932px 1028px #FFF , 628px 1182px #FFF , 268px 1527px #FFF , 1296px 338px #FFF , 1855px 1147px #FFF , 1607px 1893px #FFF , 96px 969px #FFF , 122px 1898px #FFF , 1442px 1179px #FFF , 1957px 953px #FFF , 205px 452px #FFF , 1892px 973px #FFF , 292px 1786px #FFF , 781px 547px #FFF , 84px 239px #FFF , 1730px 81px #FFF , 1783px 778px #FFF , 26px 1780px #FFF , 647px 1744px #FFF , 682px 1796px #FFF , 622px 1292px #FFF , 1392px 534px #FFF , 1415px 1933px #FFF , 1170px 52px #FFF , 186px 991px #FFF , 1292px 1794px #FFF , 1728px 1169px #FFF , 1120px 298px #FFF , 1676px 674px #FFF , 1384px 621px #FFF , 582px 273px #FFF , 1948px 1583px #FFF , 1010px 1535px #FFF , 1931px 741px #FFF , 1666px 1334px #FFF , 1192px 285px #FFF , 757px 580px #FFF , 1403px 571px #FFF , 306px 1592px #FFF , 719px 1822px #FFF , 937px 533px #FFF , 1597px 132px #FFF , 115px 1484px #FFF , 1629px 22px #FFF , 406px 667px #FFF , 758px 825px #FFF , 1951px 126px #FFF , 1579px 1805px #FFF , 1884px 1770px #FFF , 415px 38px #FFF , 817px 719px #FFF , 965px 243px #FFF , 108px 596px #FFF , 613px 506px #FFF , 1931px 1580px #FFF , 34px 614px #FFF , 1033px 712px #FFF , 1496px 1588px #FFF , 840px 1714px #FFF , 1179px 1139px #FFF , 353px 1751px #FFF , 59px 1250px #FFF , 234px 971px #FFF , 153px 627px #FFF , 1134px 702px #FFF , 392px 1605px #FFF , 944px 219px #FFF , 1386px 674px #FFF , 1599px 543px #FFF , 1549px 1009px #FFF , 906px 358px #FFF , 1843px 790px #FFF , 1045px 1027px #FFF , 1889px 1015px #FFF , 1635px 1482px #FFF , 1470px 805px #FFF , 1185px 102px #FFF , 1763px 1861px #FFF , 620px 486px #FFF , 150px 1232px #FFF , 962px 1701px #FFF , 415px 647px #FFF , 122px 1987px #FFF , 367px 889px #FFF , 310px 5px #FFF , 100px 1614px #FFF , 1404px 552px #FFF , 1098px 847px #FFF , 174px 1643px #FFF , 604px 27px #FFF , 1015px 1525px #FFF , 291px 1717px #FFF , 845px 1376px #FFF , 810px 1190px #FFF , 1197px 85px #FFF , 386px 1634px #FFF , 223px 1683px #FFF , 1102px 1572px #FFF , 337px 1087px #FFF , 1807px 941px #FFF , 1185px 267px #FFF , 575px 339px #FFF , 1871px 45px #FFF , 338px 814px #FFF , 684px 1140px #FFF , 1580px 314px #FFF , 228px 388px #FFF , 426px 1642px #FFF , 1354px 90px #FFF , 357px 1473px #FFF , 1980px 1644px #FFF , 664px 821px #FFF , 1113px 1555px #FFF , 1314px 1368px #FFF , 1099px 1901px #FFF , 1205px 810px #FFF , 1595px 1537px #FFF , 1747px 26px #FFF , 1973px 65px #FFF , 1207px 64px #FFF , 696px 965px #FFF , 1806px 386px #FFF , 1360px 542px #FFF , 1864px 1700px #FFF , 457px 795px #FFF , 1289px 650px #FFF , 1178px 1504px #FFF , 124px 1331px #FFF , 1392px 167px #FFF , 190px 1529px #FFF , 1220px 505px #FFF , 1257px 184px #FFF , 709px 1549px #FFF , 376px 966px #FFF , 1957px 1539px #FFF , 1223px 353px #FFF , 95px 513px #FFF , 1256px 66px #FFF , 1894px 1576px #FFF , 1990px 1117px #FFF , 803px 547px #FFF , 596px 1652px #FFF , 1772px 667px #FFF , 1918px 796px #FFF , 524px 1126px #FFF , 1642px 180px #FFF , 1660px 1460px #FFF , 625px 1945px #FFF , 1026px 319px #FFF , 62px 1296px #FFF , 178px 810px #FFF , 928px 593px #FFF , 793px 1221px #FFF , 849px 1985px #FFF , 1948px 557px #FFF , 1742px 588px #FFF , 810px 1928px #FFF , 597px 504px #FFF , 618px 1398px #FFF , 1402px 1116px #FFF , 565px 1145px #FFF , 1863px 1628px #FFF , 403px 1420px #FFF , 357px 198px #FFF , 1555px 255px #FFF , 1025px 1542px #FFF , 482px 1152px #FFF , 757px 1434px #FFF , 1763px 692px #FFF , 1818px 987px #FFF , 224px 593px #FFF , 1178px 1793px #FFF , 1499px 149px #FFF , 1698px 584px #FFF , 1160px 1996px #FFF , 480px 1755px #FFF , 16px 1705px #FFF , 718px 249px #FFF , 1520px 1908px #FFF , 997px 1935px #FFF , 55px 1125px #FFF , 397px 732px #FFF , 1287px 1309px #FFF , 435px 1427px #FFF , 215px 1497px #FFF , 722px 1330px #FFF , 298px 867px #FFF , 313px 1907px #FFF , 1294px 1793px #FFF , 1332px 1322px #FFF , 394px 1470px #FFF , 569px 1431px #FFF , 1020px 880px #FFF , 1730px 633px #FFF , 1504px 275px #FFF , 1728px 541px #FFF , 1889px 1826px #FFF , 1981px 1765px #FFF , 794px 1558px #FFF , 1502px 1544px #FFF , 1779px 875px #FFF , 1984px 324px #FFF , 1029px 1620px #FFF , 1203px 666px #FFF , 1466px 884px #FFF;
-    animation: animStar 50s linear infinite;
-  }
-
-  .globo {
-    top:70%;
-    animation: globo 10s linear infinite;
-  }
-
-  @keyframes globo {
-    0%{
-      transform: translateY(0px);
-    }
-    50%{
-      transform: translateY(-20px);
-    }
-    100%{
-      transform: translateY(0px);
-    }
-  }
-
-  @keyframes planetRotate {
-    0%{
-      background-position: 0% center;
-    }
-    100%{
-      background-position: -200% center;
-    }
-  }
-
-  @keyframes animStar {
-    from {
-      transform: translateY(0px);
-    }
-    to {
-      transform: translateY(-2000px);
-    }
-  }
 </style>
