--- a/src/components/sections/Books.astro
+++ b/src/components/sections/Books.astro
@@ -4,13 +4,14 @@ import { type LittleStory } from "@types";
 
 interface Props {
   bookList: LittleStory[];
+  title?: string;
 }
-const { bookList } = Astro.props;
+const { bookList, title } = Astro.props;
 ---
 
 <section class="px-4 py-20 relative" id="cuentos">
   <div class="flex flex-col gap-8 mx-auto max-w-7xl">
-    <h2 class="text-balance">¿Qué cuento quieres leer?</h2>
+    <h2 class="text-balance">{title || '¿Qué cuento quieres leer?'}</h2>
     <CardBookList bookList={bookList} />
   </div>
 </section>
