--- a/src/layouts/LayoutStory.astro
+++ b/src/layouts/LayoutStory.astro
@@ -7,6 +7,7 @@ import { CldImage } from 'astro-cloudinary';
 import Breadcrumb from '@components/Breadcrumb.astro';
 import Options from '@components/Options.astro';
 import { type Option } from "@types";
+import Books from '@components/sections/Books.astro';
 
 interface Props {
 	title: string;
@@ -16,9 +17,10 @@ interface Props {
   options: Option[];
   optionSlug: string;
   backUrl?: string;
+  relatedStories: any[];
 }
 
-const { description, transition = 'fade', title, slug, options = [], optionSlug, backUrl } = Astro.props;
+const { description, transition = 'fade', title, slug, options = [], optionSlug, backUrl, relatedStories } = Astro.props;
 ---
 
 <!doctype html>
@@ -57,6 +59,7 @@ const { description, transition = 'fade', title, slug, options = [], optionSlug,
           <slot />
           <Options options={options} slug={optionSlug} />
       </section>
+      <Books bookList={relatedStories} title='¿Quieres leer otro cuento?' />
     </main>
 	</body>
   <Footer />
