--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -40,7 +40,7 @@ import Stars from '@components/Stars.astro'
         <h1 class="pretitle text-balance font-bold mb-0">Cuentos interactivos</h1>
         <span class="title font-thin text-center text-balance leading-none">¿Qué camino eliges?</span>
       </div>
-      <Search client:load />
+      <Search client:visible />
     </div>
   </div>
 </section>
