--- a/src/components/CardBookList.astro
+++ b/src/components/CardBookList.astro
@@ -11,8 +11,8 @@ const { bookList, showFilter } = Astro.props
 }
 <div class="wrapper-grid grid gap-4 z-20">
   {
-    bookList.map(({ slug, title, created_at, resume }: LittleStory) => (
-      <CardBook slug={slug} title={title} created_at={created_at} description={resume} />
+    bookList.map(({ slug, title, created_at, resume, age, rating, rating_count: ratingCount }: LittleStory) => (
+      <CardBook slug={slug} title={title} created_at={created_at} resume={resume} ratingCount={ratingCount} rating={rating} age={age} />
     ))
   }
 </div>
