--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -35,11 +35,13 @@ const story = {
   options: JSON.parse(storyData.options),
   title: storyData.title,
   description: storyData.description,
+  rating: storyData.rating,
+  ratingCount: storyData.rating_count,
 } as Story;
 
 const relatedStories = await getRelatedStoriesBySlug(story.slug);
 ---
 
-<Layout title={story.title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} >
+<Layout title={story.title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} rating={story.rating} ratingCount={story.ratingCount} ratingSlug={story.slug} >
   <div set:html={story.text} />
 </Layout>
