--- a/src/components/sections/Books.astro
+++ b/src/components/sections/Books.astro
@@ -5,13 +5,19 @@ import { type LittleStory } from "@types";
 interface Props {
   bookList: LittleStory[];
   title?: string;
+  class?: string;
 }
-const { bookList, title } = Astro.props;
+const { bookList, title, class: className } = Astro.props;
+
 ---
 
-<section class="px-4 py-20 relative" id="cuentos">
+<section class:list={[
+  "px-4 py-20 relative",
+  className
+  ]} id="cuentos">
   <div class="flex flex-col gap-8 mx-auto max-w-7xl">
     <h2 class="text-balance">{title || '¿Qué cuento quieres leer?'}</h2>
+    <slot />
     <CardBookList bookList={bookList} />
   </div>
 </section>
