--- a/src/layouts/LayoutCategory.astro
+++ b/src/layouts/LayoutCategory.astro
@@ -29,7 +29,7 @@ const { metaDescription, metaTitle, transition = 'fade', title, slug, name } = A
     <main class="flex pt-24 flex-col gap-8 mx-auto max-w-5xl" transition:animate={transition}>
       <Breadcrumb breadcrumb={[{
         title: 'Cuentos interactivos',
-        slug: '/#cuentos',
+        slug: '/#categorias',
         current: false,
       }, {
         title,
