--- a/src/layouts/LayoutStory.astro
+++ b/src/layouts/LayoutStory.astro
@@ -46,7 +46,7 @@ const { description, transition = 'fade', title, slug, options = [], optionSlug,
       />
       <Breadcrumb breadcrumb={[{
         title: 'Cuentos interactivos',
-        slug: '/#cuentos',
+        slug: `/#${slug}`,
         current: false,
       }, {
         title,
