--- a/src/components/sections/Categories.astro
+++ b/src/components/sections/Categories.astro
@@ -5,7 +5,7 @@ import { CldImage } from 'astro-cloudinary';
 const categories = await getCategories();
 ---
 
-<section class="px-4 py-20 relative">
+<section class="px-4 py-20 relative" id="categorias">
   <div class="flex flex-col gap-8 mx-auto max-w-7xl">
     <h2 class="text-white text-balance">¿Qué categoría quieres?</h2>
     <div class="wrapper-grid grid gap-4 z-20">
