--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,7 @@ body {
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
 	font-size: 20px;
+	scroll-behavior: smooth;
 }
 main {
 	/* width: 720px;
